<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.georgecodes</groupId>
	<artifactId>spring-native-netty</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>Spring NATIVE Netty</name>
	<description>Netty project with Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
        <spring-boot.version>4.0.0</spring-boot.version>
        <java.version>25</java.version>
        <maven.compiler.release>25</maven.compiler.release>
        <checkstyle.config.location>../../../checkstyle.xml</checkstyle.config.location>
        <checkstyle.suppressions.location>../../../checkstyle-suppressions.xml</checkstyle.suppressions.location>
        <exec.mainClass>com.benchmarking.NettyApplication</exec.mainClass>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>1.57.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-instrumentation-bom</artifactId>
                <version>2.23.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

	<dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.springframework.boot</groupId>-->
<!--            <artifactId>spring-boot-starter-opentelemetry</artifactId>-->
<!--        </dependency>-->

        <dependency>
            <groupId>io.opentelemetry.instrumentation</groupId>
            <artifactId>opentelemetry-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-sdk-extension-autoconfigure</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>3.2.3</version>
        </dependency>
        <dependency>
            <groupId>io.github.mweirauch</groupId>
            <artifactId>micrometer-jvm-extras</artifactId>
            <version>0.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <systemPropertyVariables>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                    <argLine>
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        -Djdk.tracePinnedThreads=full
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>${maven.compiler.release}</source>
                    <target>${maven.compiler.release}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.42</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.9.0</version>
                <executions>
                    <execution>
                        <id>build-classpath</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>build-classpath</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputProperty>depClasspath</outputProperty>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>0.11.3</version>
                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                    <metadataRepository>
                        <enabled>false</enabled>
                    </metadataRepository>
                    <buildArgs>
                        <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                        <buildArg>-J--sun-misc-unsafe-memory-access=allow</buildArg>
                        <buildArg>-march=native</buildArg>
                        <buildArg>-R:+AlwaysPreTouch</buildArg>
                        <buildArg>-R:MaxGCPauseMillis=200</buildArg>
                        <buildArg>-R:MaxDirectMemorySize=64m</buildArg>
                        <buildArg>-R:MaxHeapSize=1280m</buildArg>
                        <buildArg>-R:MinHeapSize=1280m</buildArg>
                        <buildArg>-H:+PreserveFramePointer</buildArg>
                        <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                        <buildArg>-H:-DeleteLocalSymbols</buildArg>
                        <buildArg>-H:-StripDebugInfo</buildArg>
                        <buildArg>-H:GenerateDebugInfo=1</buildArg>
                        <buildArg>-H:ReflectionConfigurationResources=META-INF/native-image/com.benchmarking/spring-native-netty/reflect-config.json</buildArg>
                        <buildArg>--enable-monitoring=heapdump,jfr</buildArg>
                        <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
<!--                        <buildArg>&#45;&#45;future-defaults=all</buildArg>-->
                        <buildArg>--gc=G1</buildArg>

                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.BasicConfigurator</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.Level</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.Logger</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.LoggerContext</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.layout.TTLLLayout</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.BasicStatusManager</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.ConsoleAppender</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.layout</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.pattern</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.spi</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.util</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.encoder</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.helpers</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.joran.spi</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.spi</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.status</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.util</buildArg>

                        <buildArg>--initialize-at-run-time=io.netty.buffer.Unpooled</buildArg>
                        <buildArg>--initialize-at-run-time=io.netty.handler.codec.http2.CleartextHttp2ServerUpgradeHandler</buildArg>
                        <buildArg>--initialize-at-run-time=io.netty.handler.ssl.BouncyCastleAlpnSslUtils</buildArg>
                        <buildArg>--initialize-at-run-time=io.netty.util.internal.shaded.org.jctools.util.UnsafeLongArrayAccess</buildArg>
                        <buildArg>--initialize-at-run-time=reactor.netty.ReactorNetty</buildArg>
<!--                        <buildArg>&#45;&#45;link-at-build-time=ALL</buildArg>-->
                        <buildArg>--verbose</buildArg>
                        <buildArg>-H:-UnlockExperimentalVMOptions</buildArg>
                    </buildArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.6.0</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>12.2.0</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>${checkstyle.config.location}</configLocation>
                    <suppressionsLocation>${checkstyle.suppressions.location}</suppressionsLocation>
                    <includeTestSourceDirectory>false</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>false</failsOnError>
                    <failOnViolation>false</failOnViolation>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
	</build>

    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>process-aot</id>
                                <goals>
                                    <goal>process-aot</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>add-reachability-metadata</id>
                                <goals>
                                    <goal>add-reachability-metadata</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>